--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
          alert('kamu sudah dewasa')
        }
  
-    
+  let angkaRahasia = 7;
+let tebakanAndi = parseInt(prompt("Masukkan tebakan Andi:"));
+
+if (tebakanAndi === angkaRahasia) {
+  alert("Tebakan Andi benar!");
+} else if (tebakanAndi < angkaRahasia) {
+  alert("Tebakan Andi terlalu kecil");
+} else {
+  alert("Tebakan Andi terlalu besar");
+}
   </script>
     
   
